LMS-demo/force-app/main/default/objects/Employee__c/fields/deptno__c.field-meta.xml
<CustomField>
    <fullName>deptno__c</fullName>
    <label>Employee Deptno</label>
    <length>10</length>
    <type>Text</type>
</CustomField>