LMS-demo/force-app/main/default/objects/Employee__c/fields/job__c.field-meta.xml
<CustomField>
    <fullName>job__c</fullName>
    <label>Employee Designation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>