LMS-demo/force-app/main/default/objects/Employee__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>Employee Salary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>